# keylessh-m2

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  azure-setup.sh  design_guidelines.md  docker-build.sh  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  replit.md  tidecloak.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: azure-deploy-devops.yml  azure-deploy-multi.yml  azure-deploy-staging.yml  azure-deploy.yml  deploy-gateway.yml  docker-build.yml  release.yml  test.yml
attached_assets/: Pasted-Build-a-frontend-only-web-app-for-the-project-KeyleSSH-_1766029471743.txt
azure/: .env.devops  .env.staging  create-environment.sh  deploy-devops.sh  deploy-webapp.sh
azure/marketplace/: DEPLOYMENT-GUIDE.md  README.md  createUiDefinition.json  deploy.sh  generate-logos.sh  listing.md  main.bicep  mainTemplate.json  package.sh  parameters.json
bridges/punchd-bridge/: .gitignore  README.md  admin.sh  docker-compose.yml  package.json  reinit.sh  start.sh
bridges/punchd-bridge-rs/: Cargo.toml  Dockerfile  README.md  build.rs
bridges/punchd-bridge-rs/.github/workflows/: build-packages.yml
bridges/punchd-bridge-rs/azure/: container-app.yaml  deploy-aci.sh  deploy.sh
bridges/punchd-bridge-rs/installer/: GatewayProduct.wxs
bridges/punchd-bridge-rs/pkg/: README.md  com.keylessh.punchd-vpn.plist  install.sh  punchd-vpn.service
bridges/punchd-bridge-rs/pkg/deb/: postinst  prerm
bridges/punchd-bridge-rs/public/: rdp.html
bridges/punchd-bridge-rs/public/js/: rdp-client.js  webtransport-upgrade.js
bridges/punchd-bridge-rs/public/wasm/: ironrdp_web_bg.wasm
bridges/punchd-bridge-rs/src/: config.rs  logstream.rs  main.rs  setup.rs  tray.rs
bridges/punchd-bridge-rs/src/auth/: dpop.rs  mod.rs  oidc.rs  tidecloak.rs
bridges/punchd-bridge-rs/src/proxy/: http_proxy.rs  mod.rs
bridges/punchd-bridge-rs/src/quic/: mod.rs  peer_handler.rs  relay_handler.rs  transport.rs  turn_client.rs  webtransport.rs
bridges/punchd-bridge-rs/src/rdcleanpath/: credssp.rs  der_codec.rs  mod.rs  negoex.rs  rdcleanpath.rs  rdcleanpath_handler.rs
bridges/punchd-bridge-rs/src/recording/: mod.rs
bridges/punchd-bridge-rs/src/stun/: mod.rs  stun_client.rs
bridges/punchd-bridge-rs/src/vpn/: mod.rs  tun_device.rs  vpn_handler.rs  vpn_tray.rs  webview_auth.rs
bridges/punchd-bridge-rs/src/webrtc/: peer_handler.rs
bridges/punchd-bridge-rs/wix/: .gsf-save-K8Q4M3  Dockerfile  build-msi.bat  build-msi.ps1  build-msi.sh  main.wxs  punchd-vpn.wxs
bridges/punchd-bridge-rs/wix/ca/: PunchdCA.c  PunchdCA.def
bridges/punchd-bridge/docs/: ARCHITECTURE.md
bridges/punchd-bridge/gateway/: Dockerfile  package-lock.json  package.json  start.sh
bridges/ssh-bridge-rs/: Cargo.toml  Dockerfile  Dockerfile-build-deb  README.md  deploy.sh
bridges/ssh-bridge-rs/azure/: container-app.yaml  deploy.sh
bridges/ssh-bridge-rs/src/: main.rs  setup.rs  tls.rs  tray.rs
bridges/tcp-bridge/: README.md  package-lock.json  package.json
bridges/tcp-bridge-rs/: Cargo.toml  build.rs
bridges/tcp-bridge-rs/src/: main.rs  tray.rs
bridges/tcp-bridge/azure/: deploy.sh
bridges/tcp-bridge/src/: index.ts
client/: index.html
client/public/: silent-check-sso.html  vpn-auth.html
client/public/gateway/: README.md  rdp.html
client/src/: App.tsx  index.css  main.tsx  tidecloakAdapter.json
client/src/components/: ErrorBoundary.tsx  PrivateKeyInput.tsx  RdpReplayPlayer.tsx  RecordingPlayer.tsx  RefreshButton.tsx  TerminalSession.tsx  UpgradeBanner.tsx  VpnPanel.tsx
client/src/contexts/: AuthContext.tsx  ThemeContext.tsx
client/src/hooks/: useAutoRefresh.ts  useFileOps.ts  useSSHSession.ts
client/src/lib/: api.ts  appFetch.ts  dpopSigner.ts  queryClient.ts  quicSsh.ts  sshClient.ts  sshPolicy.ts  tcProxy.ts  tideSsh.ts  tidecloakAdmin.ts  tidecloakApi.ts  webrtcSsh.ts
client/src/pages/: AdminApprovals.tsx  AdminBridges.tsx  AdminDashboard.tsx  (+15 more)
data/: tidecloak.json  tidecloak.staging.json
deploy/: package-lock.json  package.json
deploy/script/: patch-tideorg.js
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPERS.md  MULTI_TENANCY.md  PUNCHD-GATEWAY.md  SIGNAL-SERVER.md  VPN-SETUP.md  flow-diagram.md
public/: tide_dpop_auth.html
script/tidecloak/: init-tidecloak.sh  realm.json  start.sh
server/: auth.ts  config.ts  index.ts  logger.ts  routes.ts  static.ts  storage.ts  vite.ts  wsBridge.ts
server/lib/: dpopSigner.ts  headlessSigner.ts  orgRoleManagement.ts  orgUserManagement.ts  provisionOrg.ts  stripe.ts  tidecloakApi.ts
shared/: schema.ts
shared/config/: claims.ts
signal-server/: Dockerfile  deploy.sh  package-lock.json  package.json  tsconfig.json
signal-server-rs/: Cargo.toml  deploy.sh
signal-server-rs/src/: config.rs  main.rs  state.rs
signal-server-rs/src/http/: mod.rs  routes.rs  turn.rs
signal-server-rs/src/proxy/: ssh.rs
signal-server-rs/src/quic/: endpoint.rs
signal-server-rs/src/registry/: mod.rs
signal-server-rs/src/relay/: http_relay.rs  mod.rs
signal-server-rs/src/signaling/: handler.rs
signal-server/public/: portal.html
signal-server/quic-relay/: Cargo.toml
signal-server/quic-relay/src/: main.rs
signal-server/src/: index.ts
tcp-bridge/: Dockerfile  README.md  package-lock.json  package.json
tcp-bridge/azure/: container-app.yaml  deploy.sh
tcp-bridge/src/: index.ts
tests/: setup.ts
tests/client/: api.test.ts  queryClient.test.ts  sshPolicy.test.ts  utils.test.ts
tests/gateway/: der-codec.test.ts  rdcleanpath.test.ts
tests/server/: auth.test.ts  destRoles.test.ts  logger.test.ts  sshUsers.test.ts  tideJWT.test.ts  wsBridge.test.ts
tests/shared/: claims.test.ts  roles.test.ts  schema.test.ts
tests/signal-server/: pairing.test.ts  registry.test.ts
tide-ssp/: CMakeLists.txt  Dockerfile  README.md  install.ps1
tide-ssp/installer/: CustomActions.c  CustomActions.def  License.rtf  Product.wxs  WorkstationProduct.wxs  build.bat  workstationbuild.bat
tide-ssp/src/: TideSSP.def  TideSubAuth.def  ed25519.c  ed25519.h  logon.c  main.c  ssp.c  subauth.c
(+70 files in other folders)
