[package]
name = "signal-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket server
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# WebSocket client (for SSH proxy)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"

# WebTransport/QUIC relay
wtransport = { version = "0.7", features = ["self-signed"] }

# HTTP client (for TideCloak proxy)
reqwest = { version = "0.12", features = ["json"] }

# Concurrent data structures
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (TURN creds)
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
bytes = "1"
urlencoding = "2"
dotenvy = "0.15"
