[package]
name = "punchd-bridge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
hyper-tls = "0.6"
http-body-util = "0.1"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
ring = "0.17"
url = "2"
dashmap = "6"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-native-tls = "0.3"
native-tls = "0.2"
webrtc = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
percent-encoding = "2"
hostname = "0.4"
toml = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
serde_urlencoded = "0.7"

[profile.release]
strip = true
lto = true
