[package]
name = "ssh-bridge-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "SSH-Bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
ring = "0.17"
url = "2"
dashmap = "6"
tower = "0.5"
serde_urlencoded = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
